<resources>
    <string name="app_name">MyAndLab</string>
    <string name="btnFourbtn1">Four Button(p103)</string>
    <string name="btnFourbtn2">Four Button(p103.리니어레이아웃)</string>
    <string name="goSchoolHome">학교 홈페이지 열기</string>
    <string name="calling911">911 응급전화 걸기</string>
    <string name="openPhoto">갤러리 열기</string>
    <string name="back">돌아가기</string>
    <string name="btnFourbtn3">좀 그럴듯한 버튼(p112)</string>
    <string name="inputText">홈페이지 주소 입력</string>
    <string name="showText">글자 나타내기</string>
    <string name="openHomepage">홈페이지 열기</string>
    <string name="oreo">오레오</string>
    <string name="pie">파이</string>
    <string name="btnCal">심플 계산기(p176,위젯)</string>
    <string name="BasicWidget">기본위젯연습</string>
    <string name="androidphone">안드로이드폰</string>
    <string name="iphone">아이폰</string>
    <string name="windowsphone">윈도우폰</string>
    <string name="switchText">천전등</string>
    <string name="ToggleButton">ToggleButton</string>
    <string name="btnlovelypet">btnLovelyPet</string>
    <string name="rotateImage">이미지 회전하기</string>
    <string name="button_made_by_code">코드로 만든 버튼</string>
    <string name="button_datetimebook">날짜시간예약</string>
    <string name="button_viewFlipper">뷰플리퍼</string>
    <string name="my_profile_image">My Profile Image</string>
    <string name="button_tabHost">탭호스트</string>
    <string name="button_tabfrag">탭(프라그먼트)</string>
    <string name="button_webView">webView</string>
    <string name="button_menu">메뉴만들기</string>
    <string name="button_snackbar">스낵바</string>
    <string name="button_customdialog">커스텀 대화상자</string>
    <string name="button_readwrite">파일 읽고 쓰기</string>
    <string name="button_canvas">캔버스 그래픽 그리기</string>
    <string name="button_painter">간단 그림판</string>
    <string name="draw_line">선 그리기</string>
    <string name="draw_circle">원 그리기</string>
    <string name="mode">모드</string>
    <string name="draw_rectangle">직사각형 그리기</string>
    <string name="change_color새">색상 변경</string>
    <string name="change_color">색상 변경</string>
    <string name="red">빨강</string>
    <string name="blue">파랑</string>
</resources>